--- a/client/src/App.css
+++ b/client/src/App.css
@@ -224,6 +224,7 @@ h1{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   width: 80%;
   margin: 20px;  
 }
@@ -263,12 +264,80 @@ h1{
   color: #e6e4e4;
   font-weight: 700;
 }
+.questions{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 20px;
+  flex: 1;
+  flex-grow: 1;
+  justify-content: space-around;
+}
+.ans-search{
+  width: 80%;
+  /* background-color: white; */
+  /* padding: 10px; */
+  /* border-radius: 12px; */
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  bottom: 0;
+  margin: 20px 20px 60px 20px;
+}
+/* Popup style */
+.popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
+.box {
+  position: relative;
+  width: 70%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  border: 1px solid #999;
+  overflow: auto;
+}
+
+.close-icon {
+  content: 'x';
+  cursor: pointer;
+  position: fixed;
+  right: calc(15% - 30px);
+  top: calc(100vh - 85vh - 33px);
+  background: #ededed;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  line-height: 20px;
+  text-align: center;
+  border: 1px solid #999;
+  font-size: 20px;
+}
+.label{
+  padding-top: 20px;
+  display: flex;
+  font-weight: 400;
+}
 
 
-
-
-
-
+.text-input{
+    border-radius: 10px;
+    width: 80%;
+    height: 35px;
+    background-color: #bbb7b7;
+    border: 1px solid #bbb7b7;
+    padding: 5px;
+  }
 
 
 
